[package]
name = "plunger"
version = "0.1.0-rc.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Plunger helps you quickly unblock your async tasks"
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
pinned-aliasable = "0.1"
pin-project-lite = "0.2"

tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
pollster = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
crossbeam-utils = "0.8"
