[package]
name = "plunger"
version = "0.1.0-rc.1"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Plunger helps you quickly unblock your async tasks"
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]
repository = "https://github.com/conradludgate/plunger"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
pinned-aliasable = "0.1"
pin-project-lite = "0.2"

parking_lot = "0.12"

tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

crossbeam-utils = "0.8"
pbkdf2 = "0.12.2"
sha2 = "0.10"

password-auth = "1"
